// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM gcJdvk"
    role="button"
  >
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV luUUm sc-gKXOVf iCfnnN"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="normal"
    >
      Save
      <div
        class="sc-ftvSup junqHC"
      />
      <span
        class="sc-iBkjds kTxGwl"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-breuTD fpPBKZ"
  >
    <div
      class="sc-evZas jOgJil"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-papXJ gHZzeo"
      >
        <hr
          class="sc-crXcEl gLuxDe"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crXcEl gLuxDe"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM gcJdvk"
    role="button"
  >
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV iQFUaF sc-gKXOVf iCfnnN"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="normal"
    >
      Save
      <div
        class="sc-ftvSup junqHC"
      />
      <span
        class="sc-iBkjds kTxGwl"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-breuTD fAlMkp"
  >
    <div
      class="sc-hAZoDl hRNplO fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-ksZaOG irMArj"
      />
    </div>
    <div
      class="sc-evZas jOgJil"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-papXJ gHZzeo"
      >
        <hr
          class="sc-crXcEl gLuxDe"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crXcEl gLuxDe"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM gcJdvk"
    role="button"
  >
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV ftWWHh sc-eCYdqJ BlKCL"
      disabled=""
      font-size="14px"
      font-weight="normal"
    >
      Save
    </button>
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV ftWWHh sc-jSMfEi inVVMF"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="normal"
    >
      <span
        class="sc-iBkjds kTxGwl"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-breuTD fpPBKZ"
  >
    <div
      class="sc-evZas jOgJil"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-papXJ gHZzeo"
      >
        <hr
          class="sc-crXcEl gLuxDe"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crXcEl gLuxDe"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM gcJdvk"
    role="button"
  >
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV dsGdHC sc-eCYdqJ BlKCL"
      font-size="14px"
      font-weight="normal"
    >
      Save
    </button>
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV dsGdHC sc-jSMfEi inVVMF"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="normal"
    >
      <span
        class="sc-iBkjds kTxGwl"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-breuTD fAlMkp"
  >
    <div
      class="sc-hAZoDl hRNplO fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-ksZaOG irMArj"
      />
    </div>
    <div
      class="sc-evZas jOgJil"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-papXJ gHZzeo"
      >
        <hr
          class="sc-crXcEl gLuxDe"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crXcEl gLuxDe"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqcoie oXrsY"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-kDDrLX"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
